Fixed overflow mistake in css

--- a/mainstylesheet.css
+++ b/mainstylesheet.css
@@ -77,14 +77,14 @@ button {
   -webkit-box-shadow: 0px 0px 14px 30px #E0DFD5;
   box-shadow: 0px 0px 14px 30px #E0DFD5;
   margin: 10%;
-  height: 100%;
+  height: fit-content;
 }
 .generic-pane > * {
   margin: 10px;
 }
 
 #content-shaper {
-  height: 100%;
+  /*height: 100%;*/
   display: flex;
   flex-flow: row-reverse;
   justify-content: space-evenly;
@@ -121,7 +121,7 @@ button {
   flex-grow: 0;
 }
 #main-content-page {
-  overflow: auto;
+  /*overflow: auto;*/
   flex-grow: 1;
   display: flex;
   justify-content: center;
